[package]
name = "winit-direct2d"
version = "0.1.0"
authors = ["Denis Maslennikov <mrdenniska@gmail.com>"]
edition = "2018"

description = "just example how to use direct2d with winit"

publish = false
license = "MIT"

[dependencies]
winit = ">=0.19"
rand = "0.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }
direct2d = { version = "0.3.0-alpha1" }
